tests/integration/per_document_grammar/validation/06_gef_reference_type_not_allowed/test.itest
RUN: %expect_exit 1 %strictdoc export %S --output-dir Output/ | filecheck %s --dump-input=fail

CHECK: error: could not parse file: {{.*}}input.sdoc.
CHECK: Semantic error: Requirement relation type/role is not registered: File.
CHECK: Location: {{.*}}input.sdoc:23:1
CHECK: Hint: Problematic requirement: ID-002.
CHECK: error: Parallelizer: One of the child processes has exited prematurely.
